Fix toast popups to be more readable on new layout

--- a/www/protected/modules/games/assets/pyramid/css/style.less
+++ b/www/protected/modules/games/assets/pyramid/css/style.less
@@ -503,6 +503,14 @@ input:-ms-input-placeholder /* placeholder only style */
   }
 }
 
+.toast-item-image {
+  top: -8px;
+}
+
+.toast-item p {
+  color: white;
+}
+
 #game_description {
 	font-size: 14px;
 	left: -10px;
